--- a/src/main/resources/assets/milky/lang/en_us.lang
+++ b/src/main/resources/assets/milky/lang/en_us.lang
@@ -16,3 +16,8 @@ item.milk_bottle.name=Milk Bottle
 item.chocolate_milk_bottle.name=Chocolate Milk Bottle
 item.strawberry_milk_bottle.name=Strawberry Milk Bottle
 item.caramel_milk_bottle.name=Caramel Milk Bottle
+item.caramel_item.name=Caramel
+item.strawberry_syrup.name=Strawberry Syrup
+
+#Blocks
+tile.milking_machine.name=Milking Machine
