Crappy Solar Generator for Milking Machine

--- a/src/main/resources/assets/milky/lang/en_us.lang
+++ b/src/main/resources/assets/milky/lang/en_us.lang
@@ -21,3 +21,4 @@ item.strawberry_syrup.name=Strawberry Syrup
 
 #Blocks
 tile.milking_machine.name=Milking Machine
+tile.solar_generator.name=Crappy Solar Generator
